--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <main class="container">
-        <form>
+        <form action="principal.html" method="POST"> <!-- Aqui você pode depois ajustar para o back-end -->
             <h1>Login</h1>
             <div class="input-box">
                 <i class="bx bxs-user"></i>
@@ -33,7 +33,7 @@
             <button type="submit" class="login">Login</button>
 
             <div class="register-link">
-                <p>Não tem uma conta? <a href="#">Cadastre-se</a></p>
+                <p>Não tem uma conta? <a href="cadastro.html">Cadastre-se</a></p>
             </div>
         </form>
 
